# libtorch_example

./: .gitignore
fruits-and-vegetables-image-recognition/: CMakeLists.txt  app.py  readme.md  remark.txt  requirements.txt  setup.py  wheels
fruits-and-vegetables-image-recognition/include/: dataset.h  log.h  main.h  utils.h
fruits-and-vegetables-image-recognition/src/: dataset.cpp  log.cpp  main.cpp  model.py  utils.cpp  utils.py
fruits-and-vegetables-image-recognition/src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
fruits-and-vegetables-image-recognition/src/pipeline/: predict_pipeline.py
fruits-and-vegetables-image-recognition/templates/: index.html
mnist/: CMakeLists.txt  mnist.cpp  readme.md
tools/: download_model.py
